# fiap-fase-5

./: .gitignore  Dockerfile  Dockerfile.dashboard  README.md  inspect_model.py  main.py  pyproject.toml
.github/workflows/: deploy-aws.yml
app/: logging_config.py  main.py  model_loader.py  monitoring.py  routes.py  schemas.py  services.py  validation.py
app/model/: model.joblib  model_metadata.joblib  model_metadata.json
dashboard/: app.py
infra/terraform/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/.github/workflows/: deploy-aws.yml
notebooks/: analise-exploratoria.ipynb
src/: __init__.py
src/model/: __init__.py  evaluate.py  feature_engineering.py  predict.py  preprocessing.py  run_training.py  train.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_evaluate.py  test_feature_engineering.py  test_model_loader.py  test_monitoring.py  test_preprocessing.py  test_schemas.py  test_train.py  test_validation.py
