[project]
name = "challenge"
version = "0.1.0"
description = "Modelo preditivo de risco de defasagem escolar - Passos Mágicos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0,<3.0.0",
    "python-json-logger>=2.0.0",
    "scikit-learn>=1.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "streamlit>=1.38.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["." ]

[tool.coverage.run]
source = ["app", "src"]

[tool.coverage.report]
show_missing = true
fail_under = 80

